Добавляет стили на главную: без шапки и футера

--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -1,1 +1,6 @@
 @import "blocks/header.scss";
+@import "blocks/banner.scss";
+@import "blocks/tizer-top.scss";
+@import "blocks/tizer-bottom.scss";
+@import "blocks/company-item.scss";
+@import "fonts.scss";
