--- a/source/css/style.css
+++ b/source/css/style.css
@@ -1,4 +1,285 @@
-.header-menu--height_91 {
-  background-color: red;
+body,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+.h1,
+.h2,
+.h3,
+.h4,
+.h5,
+.h6,
+.popup-window,
+body div.bx-yandex-map,
+.fancybox-title {
+  font-family: "CeraKFC-900", Arial, sans-serif;
+  color: #000000;
+}
+
+header .header-menu__title {
+  color: #000000;
+}
+
+@media (min-width: 992px) {
+  body .maxwidth-theme:not(.pos-static) {
+    padding-left: 187px;
+  }
+}
+.banners-big .banners-big__top-text {
+  display: block;
+  color: #000000;
+  font-size: 47px;
+  font-weight: 900;
+  line-height: 59px;
+  letter-spacing: -0.02em;
+  opacity: 1;
+}
+@media (max-width: 743px) {
+  .banners-big .banners-big__top-text {
+    font-size: 27px;
+    font-weight: 900;
+    line-height: 34px;
+    letter-spacing: -0.02em;
+  }
+}
+
+.banners-big .banners-big__text-block {
+  color: #000000;
+  font-family: "CeraKFC-400";
+  font-weight: 400;
+  opacity: 1;
+  font-size: 16px;
+  line-height: 20px;
+}
+
+.banners-big__text--wide .banners-big__title {
+  color: var(--theme-base-color);
+  font-size: 135px;
+  font-weight: 900;
+  line-height: 170px;
+  letter-spacing: -0.04em;
+}
+@media (max-width: 1200px) {
+  .banners-big__text--wide .banners-big__title {
+    font-size: 110px;
+    font-weight: 900;
+    line-height: 105px;
+    letter-spacing: -0.04em;
+    margin-bottom: 20px;
+    width: 65%;
+  }
+}
+@media (max-width: 744px) {
+  .banners-big__text--wide .banners-big__title {
+    font-size: 74px;
+    font-weight: 900;
+    line-height: 70px;
+    letter-spacing: -0.04em;
+  }
+}
+@media (min-width: 1440px) {
+  .banners-big__text--wide .banners-big__title {
+    width: 1000px;
+  }
+}
+
+.banners-big__text--wide.banners-big__text--center .banners-big__text-wrapper {
+  width: 614px;
+}
+
+@media (min-width: 1100px) {
+  .banners-img-with-text-list .grid-list--items-3 {
+    width: 1050px;
+    grid-template-columns: repeat(auto-fill, minmax(325px, 1fr));
+    justify-content: center;
+  }
+}
+.banners-img-with-text-list .grid-list__item {
+  max-width: 335px;
+  min-height: 325px;
+}
+
+.banners-img-with-text-list .rounded-4 {
+  border-radius: 20px;
+}
+
+.banners-img-with-text-list__item-image.banners-img-with-text-list__item-image--short {
+  padding-top: 100%;
+}
+
+.banners-big__wrapper::before {
+  content: "";
+  position: absolute;
+  background-image: url("../img/hand-left.svg");
+  background-repeat: no-repeat;
+  width: 234px;
+  height: 276px;
+  top: 180px;
+  left: 0;
+  z-index: 2;
+}
+
+.banners-big__wrapper::after {
+  content: "";
+  position: absolute;
+  background-image: url("../img/hand-right.svg");
+  background-repeat: no-repeat;
+  width: 175px;
+  height: 118px;
+  top: 180px;
+  right: 0;
+  z-index: 2;
+}
+
+.banners-img-with-text-list::before {
+  content: "";
+  position: absolute;
+  background-image: url("../img/hand-bottom.svg");
+  background-repeat: no-repeat;
+  width: 300px;
+  height: 220px;
+  top: -141px;
+  right: 550px;
+  z-index: 2;
+  transform: rotate(-6deg);
+}
+
+.TIZERS .index-block.index-block--padding-top-80.index-block--padding-bottom-80 h2 {
+  color: #000000;
+  font-size: 60px;
+  font-weight: 900;
+  line-height: 75px;
+  letter-spacing: 0em;
+  text-align: center;
+}
+
+@media (min-width: 1100px) {
+  .tizers-list__items-wrapper.grid-list--items-3 {
+    max-width: 650px;
+    grid-template-columns: repeat(3, minmax(200px, 1fr));
+    justify-content: center;
+    margin: 0 auto;
+  }
+}
+.tizers-list__item--column {
+  align-items: center;
+}
+
+.tizers-list__item-image-text {
+  font-family: "CeraKFC_Cyr-black";
+  font-size: 40px;
+  font-weight: 900;
+  line-height: 50px;
+}
+
+.drag-block .tizers-list__item-descr {
+  color: #000000;
+  font-family: "CeraKFC_Cyr-400";
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 20px;
+  letter-spacing: 0em;
+  text-align: center;
+}
+
+.COMPANY_TEXT h2 {
+  font-size: 38px;
+  font-weight: 900;
+  line-height: 48px;
+  color: #000000;
+  padding-left: 187px;
+  margin-bottom: 70px;
+  position: relative;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.index-block--delimiter .tizers-list__items-wrapper.grid-list {
+  grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
+  grid-gap: 32px;
+  max-width: 1015px;
+}
+
+.tizers-list__item-name.switcher-title {
+  font-family: "CeraKFC_Cyr-black";
+  font-size: 24px;
+  font-weight: 900;
+  line-height: 30px;
+}
+
+.tizers-list__item-descr.font_14 {
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 20px;
+  text-align: start;
+}
+
+.company-item__heading .index-block__title {
+  font-size: 38px;
+  font-weight: 900;
+  line-height: 48px;
+  color: #000000;
+}
+
+.company-item__text {
+  font-family: "CeraKFC-400";
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 20px;
+  letter-spacing: 0em;
+  color: #000000;
+}
+
+.company-item__text .h4 {
+  font-size: 20px;
+  font-weight: 900;
+  line-height: 25px;
+}
+
+.company-item:first-child {
+  border: none;
+  background-color: #EAEDF1;
+  background-image: url("../img/grey-bg-bottom.png");
+  background-repeat: no-repeat;
+  background-position: 100% 830px;
+}
+
+.index-block--delimiter > div {
+  border: none;
+}
+
+.index-block--padding-bottom-80 .company-item:first-child {
+  padding-bottom: 237px;
+}
+
+@font-face {
+  font-family: "CeraKFC-900";
+  src: url("../fonts/cerakfc-black.woff2") format("woff2"), url("../fonts/cerakfc-black.woff") format("woff");
+  font-weight: 900;
+  font-style: normal;
+  font-display: swap;
+}
+@font-face {
+  font-family: "CeraKFC_Cyr-black";
+  src: url("../fonts/cerakfc-condensed-black.woff2") format("woff2"), url("../fonts/cerakfc-condensed-black.woff") format("woff");
+  font-weight: 900;
+  font-style: normal;
+  font-display: swap;
+}
+@font-face {
+  font-family: "CeraKFC_Cyr-reg";
+  src: url("../fonts/cerakfc-condensed-regular.woff2") format("woff2"), url("../fonts/cerakfc-condensed-regular.woff") format("woff");
+  font-weight: 400;
+  font-style: normal;
+  font-display: swap;
+}
+@font-face {
+  font-family: "CeraKFC-400";
+  src: url("../fonts/cerakfc-regular.woff2") format("woff2"), url("../fonts/cerakfc-regular.woff") format("woff");
+  font-weight: 400;
+  font-style: normal;
+  font-display: swap;
 }
 /*# sourceMappingURL=style.css.map */
