--- a/source/sass/fonts.scss
+++ b/source/sass/fonts.scss
@@ -1,6 +1,17 @@
 @font-face {
-    font-family: 'CeraKFC-900';
-    src: url('../fonts/cerakfc-black.woff2') format('woff2'),
+    font-family: 'KFC';
+    src:
+        url('../fonts/cerakfc-regular.woff2') format('woff2'),
+        url('../fonts/cerakfc-regular.woff') format('woff');
+    font-weight: 400;
+    font-style: normal;
+    font-display: swap;
+}
+
+@font-face {
+    font-family: 'KFC';
+    src:
+        url('../fonts/cerakfc-black.woff2') format('woff2'),
         url('../fonts/cerakfc-black.woff') format('woff');
     font-weight: 900;
     font-style: normal;
@@ -8,17 +19,9 @@
 }
 
 @font-face {
-    font-family: 'CeraKFC_Cyr-black';
-    src: url('../fonts/cerakfc-condensed-black.woff2') format('woff2'),
-        url('../fonts/cerakfc-condensed-black.woff') format('woff');
-    font-weight: 900;
-    font-style: normal;
-    font-display: swap;
-}
-
-@font-face {
-    font-family: 'CeraKFC_Cyr-reg';
-    src: url('../fonts/cerakfc-condensed-regular.woff2') format('woff2'),
+    font-family: 'KFC Condensed';
+    src:
+        url('../fonts/cerakfc-condensed-regular.woff2') format('woff2'),
         url('../fonts/cerakfc-condensed-regular.woff') format('woff');
     font-weight: 400;
     font-style: normal;
@@ -26,12 +29,12 @@
 }
 
 @font-face {
-    font-family: 'CeraKFC-400';
-    src: url('../fonts/cerakfc-regular.woff2') format('woff2'),
-        url('../fonts/cerakfc-regular.woff') format('woff');
-    font-weight: 400;
+    font-family: 'KFC Condensed';
+    src:
+        url('../fonts/cerakfc-condensed-black.woff2') format('woff2'),
+        url('../fonts/cerakfc-condensed-black.woff') format('woff');
+    font-weight: 900;
     font-style: normal;
     font-display: swap;
 }
-
 
