--- a/source/sass/blocks/header.scss
+++ b/source/sass/blocks/header.scss
@@ -1,31 +1,6 @@
-body,
-h1,
-h2,
-h3,
-h4,
-h5,
-h6,
-.h1,
-.h2,
-.h3,
-.h4,
-.h5,
-.h6,
-.popup-window,
-body div.bx-yandex-map,
-.fancybox-title {
-  font-family: 'CeraKFC-900',
-    Arial,
-    sans-serif;
-  color: #000000;
-}
-
 header .header-menu__title {
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 20px;
   color: #000000;
-}
-
-@media (min-width: 992px) {
-  body .maxwidth-theme:not(.pos-static) {
-    padding-left: 187px;
-  }
 }
