--- a/source/sass/blocks/tizer-top.scss
+++ b/source/sass/blocks/tizer-top.scss
@@ -1,13 +1,27 @@
 //блок наши достижения
+//красные числа
 .TIZERS .index-block.index-block--padding-top-80.index-block--padding-bottom-80 h2 {
     color: #000000;
     font-size: 60px;
-    font-weight: 900;
     line-height: 75px;
-    letter-spacing: 0em;
     text-align: center;
+
+    @media (max-width: 743px) {
+    font-size: 38px;
+    line-height: 48px;
+    }
 }
 
+//маленькие подписи
+.drag-block .tizers-list__item-descr {
+    color: #000000;
+    font-family: 'KFC';
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 20px;
+}
+
+//расположение
 @media (min-width: 1100px) {
     .tizers-list__items-wrapper.grid-list--items-3 {
         max-width: 650px;
@@ -22,18 +36,8 @@
 }
 
 .tizers-list__item-image-text {
-    font-family: 'CeraKFC_Cyr-black';
+    font-family: 'KFC Condensed';
     font-size: 40px;
     font-weight: 900;
     line-height: 50px;
-}
-
-.drag-block .tizers-list__item-descr {
-    color: #000000;
-    font-family: 'CeraKFC_Cyr-400';
-    font-size: 16px;
-    font-weight: 400;
-    line-height: 20px;
-    letter-spacing: 0em;
-    text-align: center;
 }
