--- a/source/sass/blocks/buttons.scss
+++ b/source/sass/blocks/buttons.scss
@@ -5,4 +5,9 @@
     font-weight: 400;
     line-height: 20px;
     text-align: center;
+    padding: 15px 32px;
+}
+
+.header__main-inner {
+    padding-top: 24px;
 }
