--- a/source/css/style.css
+++ b/source/css/style.css
@@ -1,3 +1,4 @@
+@charset "UTF-8";
 @font-face {
   font-family: "KFC";
   src: url("../fonts/cerakfc-regular.woff2") format("woff2"), url("../fonts/cerakfc-regular.woff") format("woff");
@@ -63,6 +64,22 @@ header .header-menu__title {
   color: #000000;
 }
 
+@media (min-width: 991px) {
+  .header-cabinet svg {
+    display: none;
+  }
+}
+
+@media (min-width: 991px) {
+  .header-cabinet .header-cabinet__link::before {
+    content: "Войти";
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 20px;
+    text-align: center;
+  }
+}
+
 footer .footer__main-part .font_15 {
   font-weight: 400;
   font-size: 16px;
@@ -98,7 +115,7 @@ footer .footer__main-part .font_15 {
     width: 65%;
   }
 }
-@media (max-width: 744px) {
+@media (max-width: 743px) {
   .banners-big__text--wide .banners-big__title {
     font-size: 74px;
     line-height: 70px;
@@ -139,41 +156,25 @@ footer .footer__main-part .font_15 {
   }
 }
 
-.banners-big__wrapper::before {
-  content: "";
-  position: absolute;
-  background-image: url("../img/hand-left.svg");
+.banners-big__item {
+  background-image: url("../img/hand-left.svg"), url("../img/hand-right.svg");
   background-repeat: no-repeat;
-  width: 234px;
-  height: 276px;
-  top: 180px;
-  left: 0;
-  z-index: 2;
+  background-size: 259px 329px, 175px 151px;
+  background-position: -20px 153px, right top 200px;
 }
-
-.banners-big__wrapper::after {
-  content: "";
-  position: absolute;
-  background-image: url("../img/hand-right.svg");
-  background-repeat: no-repeat;
-  width: 175px;
-  height: 118px;
-  top: 180px;
-  right: 0;
-  z-index: 2;
-}
-
 .banners-img-with-text-list::before {
   content: "";
   position: absolute;
   background-image: url("../img/hand-bottom.svg");
   background-repeat: no-repeat;
-  width: 300px;
+  width: 314px;
   height: 220px;
-  top: -141px;
-  left: calc(50% - 100px);
-  z-index: 2;
-  transform: rotate(-6deg);
+  top: -209px;
+  left: calc(50% - 117px);
+}
+
+.swiper-container {
+  z-index: 0;
 }
 
 .btn {
@@ -182,16 +183,22 @@ footer .footer__main-part .font_15 {
   font-weight: 400;
   line-height: 20px;
   text-align: center;
+  padding: 15px 32px;
 }
 
-.TIZERS .index-block.index-block--padding-top-80.index-block--padding-bottom-80 h2 {
+.header__main-inner {
+  padding-top: 24px;
+}
+
+.TIZERS .index-block h2 {
   color: #000000;
   font-size: 60px;
   line-height: 75px;
   text-align: center;
+  margin-bottom: 8px;
 }
 @media (max-width: 743px) {
-  .TIZERS .index-block.index-block--padding-top-80.index-block--padding-bottom-80 h2 {
+  .TIZERS .index-block h2 {
     font-size: 38px;
     line-height: 48px;
   }
@@ -203,12 +210,14 @@ footer .footer__main-part .font_15 {
   font-size: 16px;
   font-weight: 400;
   line-height: 20px;
+  padding-left: 30px;
+  margin-top: -8px;
 }
 
 @media (min-width: 1100px) {
   .tizers-list__items-wrapper.grid-list--items-3 {
     max-width: 650px;
-    grid-template-columns: repeat(3, minmax(200px, 1fr));
+    grid-template-columns: repeat(3, minmax(219px, 1fr));
     justify-content: center;
     margin: 0 auto;
   }
@@ -222,6 +231,11 @@ footer .footer__main-part .font_15 {
   font-size: 40px;
   font-weight: 900;
   line-height: 50px;
+  padding-left: 30px;
+}
+
+.TIZERS .tizers-list .maxwidth-theme {
+  padding-left: 0;
 }
 
 .COMPANY_TEXT h2 {
@@ -320,6 +334,11 @@ body .banners-img-with-text-list__item-text--absolute * {
     font-size: 17.5px;
     line-height: 22px;
   }
+}
+
+.index-block .banners-img-with-text-list {
+  padding-top: 0;
+  padding-bottom: 118px;
 }
 
 @media (min-width: 1100px) {
