--- a/source/sass/blocks/header.scss
+++ b/source/sass/blocks/header.scss
@@ -4,3 +4,19 @@ header .header-menu__title {
   line-height: 20px;
   color: #000000;
 }
+
+.header-cabinet svg {
+  @media (min-width: 991px) {
+    display: none;
+  }
+}
+
+.header-cabinet .header-cabinet__link::before {
+  @media (min-width: 991px) {
+    content: 'Войти';
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 20px;
+    text-align: center;
+  }
+}
