--- a/source/sass/blocks/tizer-top.scss
+++ b/source/sass/blocks/tizer-top.scss
@@ -1,10 +1,11 @@
 //блок наши достижения
 //красные числа
-.TIZERS .index-block.index-block--padding-top-80.index-block--padding-bottom-80 h2 {
+.TIZERS .index-block h2 {
     color: #000000;
     font-size: 60px;
     line-height: 75px;
     text-align: center;
+    margin-bottom: 8px;
 
     @media (max-width: 743px) {
     font-size: 38px;
@@ -19,13 +20,15 @@
     font-size: 16px;
     font-weight: 400;
     line-height: 20px;
+    padding-left: 30px;
+    margin-top: -8px;
 }
 
 //расположение
 @media (min-width: 1100px) {
     .tizers-list__items-wrapper.grid-list--items-3 {
         max-width: 650px;
-        grid-template-columns: repeat(3, minmax(200px, 1fr));
+        grid-template-columns: repeat(3, minmax(219px, 1fr));
         justify-content: center;
         margin: 0 auto;
     }
@@ -40,4 +43,9 @@
     font-size: 40px;
     font-weight: 900;
     line-height: 50px;
+    padding-left: 30px;
+}
+
+.TIZERS .tizers-list .maxwidth-theme {
+    padding-left: 0;
 }
