--- a/source/sass/blocks/header.scss
+++ b/source/sass/blocks/header.scss
@@ -5,18 +5,20 @@ header .header-menu__title {
   color: #000000;
 }
 
-.header-cabinet svg {
+.header-cabinet .header-cabinet__link {
   @media (min-width: 991px) {
-    display: none;
-  }
-}
-
-.header-cabinet .header-cabinet__link::before {
-  @media (min-width: 991px) {
-    content: 'Войти';
     font-size: 16px;
     font-weight: 400;
     line-height: 20px;
     text-align: center;
   }
+}
+
+#main .mobileheader--color-colored .logo .menu-light-icon-fill svg * {
+  fill: revert-layer;
+}
+
+#main .header-menu__item--more-items li:last-child a span {
+  color:#0057FF;
+  text-decoration: underline;
 }
