Добавляет стили и адаптив для блока о природе

--- a/source/css/style.css
+++ b/source/css/style.css
@@ -51,11 +51,20 @@ body div.bx-yandex-map,
   font-weight: 900;
 }
 
-@media (min-width: 992px) {
+body .maxwidth-theme:not(.pos-static) {
+  max-width: 1110px;
+}
+@media (max-width: 992px) {
   body .maxwidth-theme:not(.pos-static) {
-    padding-left: 187px;
+    max-width: 584px;
   }
 }
+@media (max-width: 690px) {
+  body .maxwidth-theme:not(.pos-static) {
+    max-width: 378px;
+  }
+}
+
 header .header-menu__title {
   font-weight: 400;
   font-size: 16px;
@@ -262,18 +271,59 @@ footer .footer__main-part .font_15 {
   padding-left: 30px;
 }
 
-.TIZERS .index-block {
-  background-image: url("../img/boy.svg");
-  background-repeat: no-repeat;
-  background-position: right bottom -73px;
+.nature {
+  background-color: #C39E67;
+  background-repeat: repeat-x, repeat-x, no-repeat, no-repeat, repeat;
+  background-position: 50% 0, 50% 100%, 50% 0, calc(50% + 656px) -84px, 50% 50%;
+  background-image: url("../img/tear-top.svg"), url("../img/tear-bottom.png"), url("../img/trash.svg"), url("../img/basket.png"), url("../img/kiwihug.png");
+}
+.nature:not(#id) {
+  padding-top: 124px;
+  padding-bottom: 162px;
+}
+@media (max-width: 992px) {
+  .nature {
+    padding-right: 80px;
+    padding-left: 80px;
+    background-position: 50% 0, 50% 100%, calc(50% + 260px) 0, 50% 100%, 50% 50%;
+    background-image: url("../img/tear-top.svg"), url("../img/tear-bottom.png"), url("../img/trash.svg"), url("../img/basket-medium.png"), url("../img/kiwihug.png");
+  }
+  .nature:not(#id) {
+    padding-bottom: 735px;
+  }
+}
+@media (max-width: 690px) {
+  .nature {
+    padding-right: 0;
+    padding-left: 0;
+    background-position: 50% 0, 50% 100%, calc(50% + 120px) 0, 50% calc(100% - 40px), 50% 50%;
+    background-image: url("../img/tear-top-mobile.svg"), url("../img/tear-bottom-mobile.png"), url("../img/trash-mobile.svg"), url("../img/basket-mobile.png"), url("../img/kiwihug.png");
+  }
+  .nature:not(#id) {
+    padding-top: 116px;
+    padding-bottom: 610px;
+  }
 }
 
-.COMPANY_TEXT h2 {
+.nature h2 {
   font-size: 38px;
   font-weight: 900;
   line-height: 48px;
   color: #000000;
-  margin-bottom: 90px;
+  margin-right: calc(50% + 80px);
+  margin-bottom: 65px;
+}
+@media (max-width: 992px) {
+  .nature h2 {
+    margin-right: 80px;
+  }
+}
+@media (max-width: 690px) {
+  .nature h2 {
+    margin-right: 160px;
+    font-size: 32px;
+    line-height: 40px;
+  }
 }
 
 .tizers-list__item-name.switcher-title {
@@ -286,12 +336,35 @@ footer .footer__main-part .font_15 {
 }
 
 .index-block--delimiter .tizers-list__items-wrapper.grid-list {
-  grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
-  grid-gap: 32px;
-  max-width: 1015px;
+  grid-template-columns: repeat(3, 1fr);
+  gap: 56px;
+  padding-right: 34px;
+}
+@media (max-width: 992px) {
+  .index-block--delimiter .tizers-list__items-wrapper.grid-list {
+    grid-template-columns: 300px;
+    gap: 50px;
+    padding-right: 0;
+  }
+}
+@media (max-width: 690px) {
+  .index-block--delimiter .tizers-list__items-wrapper.grid-list {
+    grid-template-columns: 1fr;
+  }
+  .index-block--delimiter .tizers-list__items-wrapper.grid-list:not(#id) {
+    display: grid;
+    gap: 35px;
+    margin: 0 !important;
+    padding: 0 !important;
+    overflow: visible;
+  }
+  .index-block--delimiter .tizers-list__items-wrapper.grid-list:not(#id) > div {
+    width: auto;
+    padding: 0;
+  }
 }
 
-.TIZERS-BOTTOM .tizers-list__item-text-wrapper::before {
+.nature .tizers-list__item-text-wrapper::before {
   content: "";
   width: 60px;
   height: 62px;
@@ -300,15 +373,15 @@ footer .footer__main-part .font_15 {
   margin-bottom: 25px;
 }
 
-.TIZERS-BOTTOM .tizers-list__item-wrapper:first-child .tizers-list__item-text-wrapper::before {
+.nature .tizers-list__item-wrapper:first-child .tizers-list__item-text-wrapper::before {
   background-image: url("../img/icon1.svg");
 }
 
-.TIZERS-BOTTOM .tizers-list__item-wrapper:nth-child(2) .tizers-list__item-text-wrapper::before {
+.nature .tizers-list__item-wrapper:nth-child(2) .tizers-list__item-text-wrapper::before {
   background-image: url("../img/icon2.svg");
 }
 
-.TIZERS-BOTTOM .tizers-list__item-wrapper:nth-child(3) .tizers-list__item-text-wrapper::before {
+.nature .tizers-list__item-wrapper:nth-child(3) .tizers-list__item-text-wrapper::before {
   background-image: url("../img/icon3.svg");
 }
 
