--- a/source/sass/blocks/body.scss
+++ b/source/sass/blocks/body.scss
@@ -26,8 +26,14 @@ body div.bx-yandex-map,
 }
 
 //выравнивание
-@media (min-width: 992px) {
-    body .maxwidth-theme:not(.pos-static) {
-        padding-left: 187px;
+body .maxwidth-theme:not(.pos-static) {
+    max-width: 1110px;
+
+    @media (max-width: 992px) {
+        max-width: 584px;
+    }
+
+    @media (max-width: 690px) {
+        max-width: 378px;
     }
 }
